# tablegen-stats

./: .gitignore  CMakeLists.txt  README.md  jupyter-lite.json  requirements.txt
.github/workflows/: deploy.yml
analyze-tblgen/: irdl.py  main.py  setup.cfg  simplifier.py  visualize_stats.ipynb
analyze-tblgen/src/: visualize_stats.ipynb
analyze-tblgen/src/analyze_tablegen/: extraction.py  irdl.py  main.py  print_irdl_test_cases.py  simplifier.py  utils.py
analyze-tblgen/tools/: extract_tblgen_to_json.py  generate_paper_plots.py  print_irdl_dialect.py  print_irdl_files_to_directory.py  print_irdl_test_cases.py
api/contents/: all.json
files/: analyze_tablegen-0.0.1-py3-none-any.whl  tablegen_data.json  visualize_stats.ipynb
tblgen-extract/: CMakeLists.txt  tblgen-extract.cpp
utils/: build.sh  setup.sh
website_notebook/: requirements.txt  visualize_stats.ipynb
